<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">吾谷网</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
	<string name="header_zixun">资讯</string>
	<string name="frame_title_news">新闻</string>
	<string name="frame_title_original">原创</string>
	<string name="frame_title_farming_tong">农事通</string>
	<string name="frame_title_columnist">专栏</string>
	<string name="frame_title_subject">专题</string>
	
	<string name="network_is_not_connected">网络连接不上</string>
	<string name="resource_is_not_found">资源找不到</string>
	<string name="unknown_error">未知错误</string>
	
	 <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">下拉可以刷新</string>
    <string name="pull_to_refresh_update">最近更新：</string>
</resources>
